fixing css to text doesnt overlap on homepage

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -278,7 +278,7 @@ a:hover {
     float: right;
     width: 400px;
     margin: 0px;
-    padding: 20px 0px 0px 0px;
+    padding: 30px 0px 0px 0px;
     color: #787878;
 }
 
@@ -349,7 +349,7 @@ a:hover {
 
 #full {
     float: left;
-    width: 600px;
+    width: 550px;
     margin: 0px;
     padding: 30px 0px 0px 0px;
     color: #787878;
